--- a/Chapter 5 Programming Project.vcxproj
+++ b/Chapter 5 Programming Project.vcxproj
@@ -125,6 +125,9 @@
   <ItemGroup>
     <ClCompile Include="Chapter 5 Programming Project.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="LineUp.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
