--- a/Chapter 5 Programming Project.vcxproj
+++ b/Chapter 5 Programming Project.vcxproj
@@ -127,6 +127,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="LineUp.txt" />
+    <Text Include="People.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
